Fixed horizontal scroll on circle subcategories module

--- a/css/skins/hanna/main.less
+++ b/css/skins/hanna/main.less
@@ -274,6 +274,10 @@
 /************************************************************************************/
 /* Subcategories page with animating circles */
 
+	#content ul.ch-grid  {
+		padding: 0;
+	}
+
 	.ch-grid {
 		margin: 20px 0 0;
 	    padding: 0;
